--- a/jed2.css
+++ b/jed2.css
@@ -1,8 +1,16 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
+
+body {
+    height: 100vh;
+    width: 100vw;
+}
+
+/* ----- Exercise1 ----- */
 /* .all{
     width: 100%;
     display: flex;
@@ -21,7 +29,8 @@
     padding: 10px;
 } */
 
-.bground{
+/* ----- Exercise2 ----- */
+/* .bground{
     width: 100%;
     height: 745px;
     background-image: url(Images/Mountain2.jpg);
@@ -50,4 +59,65 @@
 }
 .div2{
     font-size: 20px;
+} */
+
+/* ----- Exercise3 ----- */
+/* .header{
+    width: 100%;
+    height: 150px;
+    background-color: darkgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+}
+.link{
+    width: 100%;
+    height: 50px;
+    background-color: black;
+    font-size: 20px;
+}
+.link li{
+    display: inline-block;
+    color: #fdfdfd;
+    margin-top: 15px;
+    padding-left: 50px;
+}
+.column{    
+    float: left;
+    width: calc(100%/3);
+    padding: 20px;
+    text-align: center;
+} */
+
+.icon {
+    font-size: 100px;
+    position: relative;
+    top: 50%;
+    left: 0;
+    margin: 0 auto;
+    transform: translateY(-50%);
+}
+
+.red {
+    width: 40px;
+    height: 40px;
+    background-color: #ff000090;
+    border-radius: 50%;
+    margin-left: 70px;
+    position: absolute;
+    top: 0;
+    text-align: center;
+    font-size: 30px;
+}
+
+span{
+    width: 250px;
+    display: block;
+    height: 250px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #000;
 }
