--- a/exercise3.css
+++ b/exercise3.css
@@ -7,7 +7,7 @@
     justify-content: space-around;
     align-items: center;
 }
-.container{
+.div{
     width: 315px;
     height: 200px;
     margin: 10px;
