--- a/jed2.css
+++ b/jed2.css
@@ -4,5 +4,59 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
-
-
+header{
+    width: 100%;
+    height: 200px;
+    background-color:rgb(0, 255, 174);
+    color: white;
+    text-align: center;
+    padding: 50px;
+    font-size: 20px;
+}
+header p{
+    margin-top: 10px;
+}
+nav{
+    width: 100%;
+    height: 50px;
+    background-color: #000000;
+}
+nav li{
+    display: inline-block;
+    padding: 15px;
+    padding-left: 50px;
+}
+nav a{
+    color: white;
+    text-decoration: none;
+}
+main{
+    width: 100%;
+    display: flex;
+}
+.div1{
+    width: 35%;
+    height: 400px;
+    background-color: rgb(222, 222, 222);
+    padding: 30px;
+    font-size: 20px;
+}
+.div2{
+    width: 65%;
+    height: 400px;
+    padding: 30px;
+    font-size: 20px;
+    background-color: rgb(241, 241, 241);
+}
+.div1 p, .div2 p{
+    padding-top: 30px;  
+}
+.image1, .image2{
+    width: 95%;
+    height: 200px;
+    background-color: gray;
+    margin-top: 40px;
+}
+.image1 p, .image2 p{
+    padding: 30px;
+}
